# rsepedia-analysis

./: .gitignore  1.download.py  2.analysis.py  2.preprocess.py  3.parse_one.py  3.vectors.py  4.redo_language.py  README.md  _config.yml  missing-requirements.json  model.doc2vec  requirements.txt  software-embeddings.csv  vectors.csv
.github/: FUNDING.yml
.github/workflows/: update-analysis.yaml
_data/: language_counts.json  repos.json  repos_counts_languages.json  stats.json
_includes/: footer.html  nav.html  testimonial.html  wrap.html
_layouts/: post.html  repo.html  table.html
_repos/github/0xCoto/Virgo/: README.md  data.json
_repos/github/1313e/CMasher/: README.md  data.json
_repos/github/1313e/PRISM/: README.md  data.json
_repos/github/21cmFAST/21cmFAST/: README.md  data.json
_repos/github/21cmfast/21cmEMU/: README.md  data.json
_repos/github/2decomp-fft/2decomp-fft/: README.md  data.json
_repos/github/3D-e-Chem/kripodb/: README.md  data.json
_repos/github/3D-e-Chem/sygma/: README.md  data.json
_repos/github/3d-pli/fastpli/: README.md  data.json
_repos/github/3fon3fonov/exostriker/: README.md  data.json
_repos/github/3top1a/biotools-linter/: README.md  data.json  requirements.txt
_repos/github/4dn-dcic/pairix/: README.md  data.json
_repos/github/4pisky/fourpisky-core/: README.md  data.json  requirements.txt  setup.py
_repos/github/AA-ALERT/frbcat-web/: README.md  data.json
_repos/github/AA-ALERT/frbcatdb/: README.md  data.json  setup.py
_repos/github/ABM4ALL/Melodie/: README.md  data.json
_repos/github/ACCarnall/SpectRes/: README.md  data.json
_repos/github/ACCarnall/bagpipes/: README.md  data.json
_repos/github/ACEnglish/truvari/: README.md  data.json
_repos/github/ACTCollaboration/zCluster/: README.md  data.json
_repos/github/ADAH-EviDENce/evidence/: README.md  data.json
_repos/github/AMReX-Astro/Castro/: README.md  data.json
_repos/github/AMReX-Astro/MAESTROeX/: README.md  data.json
_repos/github/AMReX-Astro/Nyx/: README.md  data.json
_repos/github/AMReX-Combustion/PeleLMeX/: README.md  data.json
_repos/github/AOtools/aotools/: README.md  data.json  requirements.txt
_repos/github/AWehrhahn/SME/: README.md  data.json  requirements.txt
_repos/github/Adamtaranto/Yanagiba/: README.md  data.json  setup.py
_repos/github/AdmiralenOla/Scoary/: README.md  data.json
_repos/github/AemulusProject/bias_emulator/: README.md  data.json
_repos/github/AgrDataSci/climatrends/: README.md  data.json
_repos/github/Ajstros/pyripherals/: README.md  data.json  requirements.txt
_repos/github/AlexMaraio/WeakLensingQML/: README.md  data.json
_repos/github/AlexMikes/AutoFunc/: README.md  data.json  setup.py
_repos/github/AlexanderJuestel/pyheatdemand/: README.md  data.json
_repos/github/AlexanderLabWHOI/EUKulele/: README.md  data.json
_repos/github/AliYoussef96/parazitCUB/: DESCRIPTION  README.md  data.json
_repos/github/AllenInstitute/bmtk/: README.md  data.json
_repos/github/AlphonsG/Rainbow-Optical-Flow-For-ALI/: README.md  data.json
_repos/github/Alymantara/pydoppler/: README.md  data.json
_repos/github/Ambuj-UF/APOP/: README.md  data.json
_repos/github/AnantharamanLab/vRhyme/: README.md  data.json
_repos/github/AndrewAnnex/SpiceyPy/: README.md  data.json
_repos/github/AndreyTavleev/DiscVerSt/: README.md  data.json
_repos/github/AngusWright/LAMBDAR/: README.md  (+1 more)
_repos/github/CosmoStat/Glimpse/: CMakeLists.txt
_repos/github/David-McKenna/udpPacketManager/: CMakeLists.txt
_repos/github/Markusjsommer/BalrogCPP/: CMakeLists.txt
_repos/github/PDB-REDO/cif-tools/: CMakeLists.txt
_repos/github/PDB-REDO/libpdb-redo/: CMakeLists.txt
_repos/github/PDB-REDO/tortoize/: CMakeLists.txt  README.md  data.json  package.json
_repos/github/aroffringa/aartfaac2ms/: CMakeLists.txt
_repos/github/astroboylrx/PLAN/: CMakeLists.txt  README.md  data.json
_repos/github/basp-group/Puri-Psi/: CMakeLists.txt  README.md  data.json
_repos/github/bwvdnbro/HydroCode1D/: CMakeLists.txt  README.md  data.json
_repos/github/cosmostat/nicaea/: CMakeLists.txt
_repos/github/egpbos/barcode/: CMakeLists.txt  README.md  data.json
_repos/github/jydu/physamp/: CMakeLists.txt  README.md  data.json
_repos/github/kd0kfo/cosmology/: CMakeLists.txt  README.md  data.json
_repos/github/kdmurray91/libqcpp/: CMakeLists.txt  README.md  data.json
_repos/github/lanl/GLUE/: CMakeLists.txt  README.md  data.json
_repos/github/mjuric/galfast/: CMakeLists.txt  README.md  data.json
_repos/github/mpokorny/vysmaw/: CMakeLists.txt  README.md  data.json
_repos/github/osallou/cassiopee-c/: CMakeLists.txt  README.md  data.json
_repos/github/rhyspoulton/OrbWeaver/: CMakeLists.txt
_repos/github/rvaser/rampler/: CMakeLists.txt  README.md  data.json
_repos/github/wullm/fastdf/: CMakeLists.txt
_repos/github/wullm/zwindstroom/: CMakeLists.txt  README.md  data.json
_repos/github/yogi-tud/space_gpu/: CMakeLists.txt  README.md  data.json
_repos/gitlab/ENKI-portal/ThermoCodegen/: CMakeLists.txt
_repos/gitlab/aroffringa/aoflagger/: CMakeLists.txt  README.md  data.json
_repos/gitlab/aroffringa/wsclean/: CMakeLists.txt  README.md  data.json
_repos/gitlab/rahmannlab/episegmix/: CMakeLists.txt
_repos/gitlab/remikz/nccmp/: CMakeLists.txt  README.md  data.json
_repos/gitlab/rki_bioinformatics/HiLive2/: CMakeLists.txt  README.md  data.json
assets/css/: style.css
assets/tipuesearch/: tipuesearch_content.js
docs/: all-repos-rounded.md  all-repos.md  global-data.json  index.html  js-repos.md  language-counts.json  languages.json  meta.json  python-repos.md  r-repos.md  software-embeddings.csv  stats.json  tokens.json  topics.json
legacy/v1/: 3.vectors.py  4.wikipedia.py  README.md
legacy/v1/docs/: index.html  meta.json
legacy/v2/: 1.download.py  2.preprocess.py  3.model.py  README.md  predictions.json  requirements.txt
legacy/v2/docs/: index.html  meta.json  repo_meta.json  software-embeddings.csv
pages/: cpp.md  dependencies.md  go.md  index.html  js.md  languages.html  python.md  r.md  repos.html  search.html
(+8869 files in other folders)
